xee-xpath-compiler/src/snapshots/xee_xpath_compiler__ast_ir__tests__multiple_axis_steps.snap
---
source: xee-xpath-compiler/src/ast_ir.rs
expression: "convert_xpath(\"child::a/child::b\")"
---
Ok(
    Spanned {
        value: FunctionDefinition(
            FunctionDefinition {
                declared_name: None,
                params: [
                    Param {
                        name: Name(
                            "v0",
                        ),
                        type_: None,
                        default: None,
                        required: false,
                        original_name: None,
                        tunnel: false,
                    },
                    Param {
                        name: Name(
                            "v1",
                        ),
                        type_: None,
                        default: None,
                        required: false,
                        original_name: None,
                        tunnel: false,
                    },
                    Param {
                        name: Name(
                            "v2",
                        ),
                        type_: None,
                        default: None,
                        required: false,
                        original_name: None,
                        tunnel: false,
                    },
                ],
                return_type: None,
                body: Spanned {
                    value: Let(
                        Let {
                            name: Name(
                                "v3",
                            ),
                            var_expr: Spanned {
                                value: Step(
                                    Step {
                                        step: Step {
                                            axis: Child,
                                            node_test: NameTest(
                                                Name(
                                                    Spanned {
                                                        value: OwnedName {
                                                            local_name_str: "a",
                                                            namespace_str: "",
                                                            prefix_str: "",
                                                        },
                                                        span: 7..8,
                                                    },
                                                ),
                                            ),
                                        },
                                        context: Spanned {
                                            value: Variable(
                                                Name(
                                                    "v0",
                                                ),
                                            ),
                                            span: 0..0,
                                        },
                                    },
                                ),
                                span: 0..8,
                            },
                            return_expr: Spanned {
                                value: Deduplicate(
                                    Spanned {
                                        value: Map(
                                            Map {
                                                context_names: ContextNames {
                                                    item: Name(
                                                        "v4",
                                                    ),
                                                    position: Name(
                                                        "v5",
                                                    ),
                                                    last: Name(
                                                        "v6",
                                                    ),
                                                },
                                                var_atom: Spanned {
                                                    value: Variable(
                                                        Name(
                                                            "v3",
                                                        ),
                                                    ),
                                                    span: 0..8,
                                                },
                                                return_expr: Spanned {
                                                    value: Step(
                                                        Step {
                                                            step: Step {
                                                                axis: Child,
                                                                node_test: NameTest(
                                                                    Name(
                                                                        Spanned {
                                                                            value: OwnedName {
                                                                                local_name_str: "b",
                                                                                namespace_str: "",
                                                                                prefix_str: "",
                                                                            },
                                                                            span: 16..17,
                                                                        },
                                                                    ),
                                                                ),
                                                            },
                                                            context: Spanned {
                                                                value: Variable(
                                                                    Name(
                                                                        "v4",
                                                                    ),
                                                                ),
                                                                span: 0..0,
                                                            },
                                                        },
                                                    ),
                                                    span: 9..17,
                                                },
                                            },
                                        ),
                                        span: 9..17,
                                    },
                                ),
                                span: 9..17,
                            },
                        },
                    ),
                    span: 9..17,
                },
                static_base_uri: None,
            },
        ),
        span: 0..17,
    },
)
