xee-xpath-compiler/src/snapshots/xee_xpath_compiler__ast_ir__tests__unknown_static_function_name.snap
---
source: xee-xpath-compiler/src/ast_ir.rs
expression: "convert_expr_single(\"unknown_function()\")"
---
Err(
    SpannedError {
        error: XPST0017,
        span: Some(
            SourceSpan(
                0,
                18,
            ),
        ),
        detail: None,
        contexts: [],
    },
)
